--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,51 +6,40 @@
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
 
-    <TextView
-        android:id="@+id/tvUsernameTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="75dp"
-        android:layout_marginTop="75dp"
-        android:text="Username"
-        android:textColor="#000000" />
-
     <EditText
         android:id="@+id/etUsername"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tvUsernameTitle"
-        android:layout_alignStart="@+id/tvUsernameTitle"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="47dp"
+        android:layout_marginTop="177dp"
+        android:layout_marginEnd="52dp"
+        android:background="@drawable/text_input_background"
         android:ems="10"
-        android:hint="Username"
-        android:inputType="textPersonName" />
+        android:hint="   Username"
 
-    <TextView
-        android:id="@+id/tvPasswordTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/etUsername"
-        android:layout_alignStart="@+id/etUsername"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="10dp"
-        android:text="Password"
-        android:textColor="#000000" />
+        android:inputType="textPersonName"
+        android:textSize="14sp"
+        android:visibility="visible" />
 
     <EditText
         android:id="@+id/etPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tvPasswordTitle"
-        android:layout_alignStart="@+id/tvPasswordTitle"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_below="@+id/etUsername"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="50dp"
+        android:background="@drawable/text_input_background"
         android:ems="10"
-        android:hint="Password"
-        android:inputType="textPassword" />
+        android:hint="   Password"
+        android:inputType="textPassword"
+        android:textSize="14sp" />
 
     <Button
         android:id="@+id/btnLogin"
@@ -82,4 +71,20 @@
         android:layout_marginStart="0dp"
         android:layout_marginTop="10dp"
         android:text="Sign Up" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="354dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/etUsername"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="-100dp"
+        app:srcCompat="@drawable/instagram_logo" />
+
+
 </RelativeLayout>
