--- a/app/src/main/res/layout/activity_post_details.xml
+++ b/app/src/main/res/layout/activity_post_details.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    tools:context=".PostDetails">
 
     <TextView
         android:id="@+id/tvDisplayUsername"
@@ -12,14 +13,14 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:text="username"
         android:textColor="#000000"
         android:textSize="18sp" />
 
     <ImageView
-        android:id="@+id/ivPostImage"
-        android:layout_width="wrap_content"
+        android:id="@+id/ivDisplayImage"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvDisplayUsername"
         android:layout_alignParentStart="true"
@@ -27,28 +28,27 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:srcCompat="@drawable/ic_launcher_background" />
 
     <TextView
-        android:id="@+id/tvPostDescription"
+        android:id="@+id/tvDisplayDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/ivPostImage"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="5dp"
-        android:text="description"
-        android:textColor="#201E1E" />
-
-    <TextView
-        android:id="@+id/tvPostTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tvPostDescription"
-        android:layout_alignStart="@+id/tvPostDescription"
+        android:layout_below="@+id/ivDisplayImage"
+        android:layout_alignStart="@+id/ivDisplayImage"
         android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginBottom="10dp"
-        android:text="createdAt" />
+        android:layout_marginTop="10dp"
+        android:text="description"
+        android:textColor="#000000" />
+
+    <TextView
+        android:id="@+id/tvCreatedAt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvDisplayDescription"
+        android:layout_alignStart="@+id/tvDisplayDescription"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="10dp"
+        android:text="time"
+        android:textSize="12sp" />
 </RelativeLayout>
