finished profile fragment and some stylistic stuff

--- a/app/src/main/res/layout/fragment_compose.xml
+++ b/app/src/main/res/layout/fragment_compose.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
+    android:orientation="vertical"
     tools:context=".fragments.ComposeFragment">
 
     <EditText
@@ -27,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:background="@drawable/loginbutton"
+        android:background="@drawable/composebutton"
         android:text="Take A Photo"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,11 +40,11 @@
         android:layout_width="250dp"
         android:layout_height="222dp"
         android:layout_marginTop="16dp"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnCaptureImage"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        app:srcCompat="@drawable/igcameraimg" />
 
     <Button
         android:id="@+id/btnSubmit"
@@ -52,7 +53,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="20dp"
-        android:background="@drawable/loginbutton"
+        android:background="@drawable/composebutton"
         android:text="Post"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
